# grimp

./: .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  justfile  pyproject.toml  ruff.toml
.github/: pull_request_template.md
.github/workflows/: release.yml
docs/: conf.py  usage.rst
rust/: Cargo.toml
rust/src/: import_parsing.rs  import_scanning.rs  module_finding.rs
src/grimp/: __init__.py  exceptions.py  main.py
src/grimp/adaptors/: caching.py  filesystem.py  modulefinder.py  packagefinder.py
src/grimp/application/: config.py  graph.py  scanning.py  usecases.py
src/grimp/application/ports/: caching.py  filesystem.py  modulefinder.py  packagefinder.py  timing.py
src/grimp/domain/: analysis.py  valueobjects.py
tests/: config.py
tests/adaptors/: filesystem.py  modulefinder.py  packagefinder.py  timing.py
tests/benchmarking/: test_benchmarking.py
tests/functional/: test_build_and_use_graph.py  test_build_and_use_graph_with_multiple_roots.py  test_build_graph_on_real_packages.py  test_caching.py  test_error_handling.py  test_namespace_packages.py
tests/unit/: conftest.py  test_exceptions.py
tests/unit/adaptors/: test_caching.py  test_filesystem.py  test_modulefinder.py  test_packagefinder.py
tests/unit/application/: test_scanning.py  test_usecases.py
tests/unit/application/graph/: test_chains.py  test_cycle_breakers.py  test_direct_imports.py  test_hierarchy.py  test_layers.py  test_manipulation.py  test_misc.py
tests/unit/domain/: test_valueobjects.py
